2002-10-14 Roger Hardiman <roger@freebsd.org>

	* endpoint.cpp, main_window.cpp, pref_window.cpp: Speex is now 8k.


2002-10-14 Roger Hardiman <roger@freebsd.org>

	* chat_window.cpp, connection.cpp, endpoint.cpp, ils.cpp,
	main_window.cpp, misc.h, pref_window.cpp: Change UTF8 to UTF-8 in
	two places in the source code. Also update the comments to UTF-8.


2002-10-14 Damien Sandras  <dsandras@seconix.com>

	* src/ils.cpp: I forgot this file.
	
2002-10-14 Damien Sandras  <dsandras@seconix.com>

	* src/connection.cpp, src/endpoint.cpp, src/chat_window.cpp, 
	lib/xdap/xdap.c: Changed UTF8 to UTF-8 for better portability, thanks
	to Roger for tracking this portability bug down!
	
2002-10-13 Damien Sandras  <dsandras@seconix.com>

	* src/toolbar.cpp: Changed connect icon size to LARGE_TOOLBAR again.

2002-10-13 Damien Sandras  <dsandras@seconix.com>

	* pixmaps/, toolbar.cpp: Added some more icons from Jakub!! Great
	work!
	
2002-10-13 Damien Sandras  <dsandras@seconix.com>

	* configure.in: Reverted changes. Using OpenLDAP again.

	* lib/stock-icons.c, lib/stock-icons.h: Added new Jakub's icons.

	* lib/xdap/Makefile.am: Reverted changes. Using OpenLDAP again.

	* lib/xdap/xdap.cpp: Removed.

	* lib/xdap/xdap.cpp: Added.

	* lib/xdap/xdap.h: Reverted changes. Using OpenLDAP again.

	* pixmaps/Makefile.am: Added new Jakub's icons.

	* pixmaps/audio-mute.png: Added new Jakub's icons.

	* pixmaps/quickcam.xpm: Removed.

	* src/ils.cpp: Reverted changes. Using OpenLDAP again.

	* src/ils.h: Reverted changes. Using OpenLDAP again.

	* src/toolbar.cpp: Added new Jakub's icons.
	
2002-10-12 Roger Hardiman <roger@freebsd.org>

	* configure.in: Updated FreeBSD section.

2002-10-11 Damien Sandras  <dsandras@seconix.com>

	* sound_handling.h: Fixed typo in patch.
	
2002-10-11 Damien Sandras  <dsandras@seconix.com>

	* configure.in, sound_handling.h: Patches for FreeBSD by Roger 
	Hardiman.
	
2002-10-11 Damien Sandras  <dsandras@seconix.com>
