@@ -1,14 +1,17 @@
+2002-10-14 Damien Sandras  <dsandras@seconix.com>
+
+	* src/gnomemeeting-config-tool.in: Removed unuseful and non-portable 
+	test.
+	
 2002-10-14 Roger Hardiman <roger@freebsd.org>
 
 	* endpoint.cpp, main_window.cpp, pref_window.cpp: Speex is now 8k.
-
 
 2002-10-14 Roger Hardiman <roger@freebsd.org>
 
 	* chat_window.cpp, connection.cpp, endpoint.cpp, ils.cpp,
 	main_window.cpp, misc.h, pref_window.cpp: Change UTF8 to UTF-8 in
 	two places in the source code. Also update the comments to UTF-8.
-
 
 2002-10-14 Damien Sandras  <dsandras@seconix.com>
 
